Update protobuf-java to 3.25.8 (#3925)
## About this PR
📦 Updates
[com.google.protobuf:protobuf-java](https://github.com/protocolbuffers/protobuf)
from `3.25.7` to `3.25.8`

📜 [GitHub Release
Notes](https://github.com/protocolbuffers/protobuf/releases/tag/v3.25.8)
- [Version
Diff](https://github.com/protocolbuffers/protobuf/compare/v3.25.7...v3.25.8)

## Usage
✅ **Please merge!**

I'll automatically update this PR to resolve conflicts as long as you
don't change it yourself.

If you'd like to skip this version, you can just close this PR. If you
have any feedback, just mention me in the comments below.

Configure Scala Steward for your repository with a
[`.scala-steward.conf`](https://github.com/scala-steward-org/scala-steward/blob/f0dfaa6d8e24b261aeafbc7f99c5325ed9365cf2/docs/repo-specific-configuration.md)
file.

_Have a fantastic day writing Scala!_

<details>
<summary>⚙ Adjust future updates</summary>

Add this to your `.scala-steward.conf` file to ignore future updates of
this dependency:
```
updates.ignore = [ { groupId = "com.google.protobuf", artifactId = "protobuf-java" } ]
```
Or, add this to slow down future updates of this dependency:
```
dependencyOverrides = [{
  pullRequests = { frequency = "30 days" },
  dependency = { groupId = "com.google.protobuf", artifactId = "protobuf-java" }
}]
```
</details>

<sup>
labels: library-update
</sup>

<!-- scala-steward = {
  "Update" : {
    "ForArtifactId" : {
      "crossDependency" : [
        {
          "groupId" : "com.google.protobuf",
          "artifactId" : {
            "name" : "protobuf-java",
            "maybeCrossName" : null
          },
          "version" : "3.25.7",
          "sbtVersion" : null,
          "scalaVersion" : null,
          "configurations" : null
        }
      ],
      "newerVersions" : [
        "3.25.8"
      ],
      "newerGroupId" : null,
      "newerArtifactId" : null
    }
  },
  "Labels" : [
    "library-update"
  ]
} -->

---------

Co-authored-by: Taro L. Saito <leo@x