@@ -939,7 +939,7 @@ lazy val benchmark =
         // "com.thesamet.scalapb" %% "scalapb-runtime-grpc" % scalapb.compiler.Version.scalapbVersion
         // For grpc-java
         "io.grpc"             % "grpc-protobuf" % GRPC_VERSION,
-        "com.google.protobuf" % "protobuf-java" % "3.25.7",
+        "com.google.protobuf" % "protobuf-java" % "3.25.8",
         ("com.chatwork"      %% "scala-ulid"    % "1.0.24").cross(CrossVersion.for3Use2_13)
       )
       //      Compile / PB.targets := Seq(
@@ -1002,6 +1002,11 @@ lazy val parquet =
         "org.xerial.snappy"  % "snappy-java"  % "1.1.10.7",
         "org.slf4j"          % "slf4j-jdk14"  % SLF4J_VERSION   % Optional,
         "org.apache.parquet" % "parquet-avro" % PARQUET_VERSION % Test
+      ),
+      // Add Java options to allow security manager for Hadoop/Parquet compatibility with Java 17+
+      Test / fork := true,
+      Test / javaOptions ++= Seq(
+        "-Djava.security.manager=allow"
       )
     )
     .dependsOn(codec.jvm, sql)
